WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277666
Inputs with overflowing content cannot be scrolled within an iFrame.
https://bugs.webkit.org/show_bug.cgi?id=277666
Summary
Inputs with overflowing content cannot be scrolled within an iFrame.
Simeon Cheeseman
Reported
2024-08-05 19:17:39 PDT
This may be a regression of
https://bugs.webkit.org/show_bug.cgi?id=188374
and we've confirmed it occurs in iOS 16 and iOS 17. To replicate; 1. Open
https://codepen.io/team/tablecheck/pen/LYKLRmj/84e3741f7a8cafa7547bb8b215b76c63
2. Inside the iframe, type or copy in "START - test test test test test test test test test - END" 3. Try to scroll the input field back to see the "START" string Neither long press and drag nor long press the on-screen keyboard and moving the cursor cause the input content to scroll and the "START" cannot be found.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-06 13:07:18 PDT
<
rdar://problem/133320357
>
Wenson Hsieh
Comment 2
2024-10-23 17:05:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35658
EWS
Comment 3
2024-10-23 20:13:15 PDT
Committed
285635@main
(aeacdd2cd7d9): <
https://commits.webkit.org/285635@main
> Reviewed commits have been landed. Closing PR #35658 and removing active labels.
Wenson Hsieh
Comment 4
2024-10-23 20:50:53 PDT
(In reply to Simeon Cheeseman from
comment #0
)
> This may be a regression of
https://bugs.webkit.org/show_bug.cgi?id=188374
> and we've confirmed it occurs in iOS 16 and iOS 17. >
For future reference — this never worked in WebKit2. #188374 is only about handling updates to the selection endpoints during text interactions on iOS, whereas this bug is about autoscrolling.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug